Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13166

sanity test_812b: FAIL: lfs quota should succeed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • RHEL 8.1 client and server
    • 3
    • 9223372036854775807

      This issue was created by maloo for jianyu <yujian@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/2f7e1a68-3c34-11ea-971c-52540065bddc

      test_812b failed with the following error:

      Unexpected quotactl error: Operation not supported
      Disk quotas for usr 0 (uid 0):
           Filesystem  kbytes   quota   limit   grace   files   quota   limit   grace
         /mnt/lustre/     [0]       0       0       -     [0]       0       0       -
      Some errors happened when getting quota info. Some devices may be not working or deactivated. The data in "[]" is inaccurate.
       sanity test_812b: @@@@@@ FAIL: lfs quota should succeed
      

      Console log on client node:

      LustreError: 14417:0:(osc_quota.c:308:osc_quotactl()) ptlrpc_queue_wait failed, rc: -95
      LustreError: 14417:0:(mdc_request.c:2057:mdc_quotactl()) ptlrpc_queue_wait failed, rc: -95
      LustreError: 14417:0:(lmv_obd.c:3526:lmv_quotactl()) getquota on mdt 0 failed. -95
      Lustre: DEBUG MARKER: /usr/sbin/lctl mark  sanity test_812b: @@@@@@ FAIL: lfs quota should succeed 
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity test_812b - lfs quota should succeed

            wshilong Wang Shilong (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: